--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,9 @@
   font-weight: 500;
   color: rgb(123, 14, 23);
 }
+
+.author-name {
+  text-decoration: none;
+  text-decoration-style: none;
+  
+}
